--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -14,3 +14,12 @@
 body{
     background-color: #f9f9f9;
 }
+
+.scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-none {
+    -ms-overflow-style: none;  /* IE 10+ */
+    scrollbar-width: none;  /* Firefox */
+  }
+  
